[sync] Fix roaming profile path for local sync database file.

The file was missing the Google prefix to make it equal to the
local profile location.

This is only a temporary fix before the proper branded name can
be used to make Branded and non-branded Chromium builds name the
location properly.

BUG=694464
TEST=Manual check that the right path is used.

Review-Url: https://codereview.chromium.org/2709693002
Cr-Commit-Position: refs/heads/master@{#451984}

Former-commit-id: 314cce71dbd6d223bef618da475a81831840d74a